--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,17 @@
             name="main"
             type="MainActivity"/>
     </data>
+
     <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
+        android:orientation="vertical"
         >
-
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/fab2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
@@ -24,7 +25,9 @@
             app:elevation="6dp"
             app:pressedTranslationZ="12dp"
             android:src="@mipmap/ic_launcher"
-            android:clickable="true" />
+            android:clickable="true"
+            android:onClick="@{()->main.testSnackBar()}"
+            />
         <!--<android.support.design.widget.AppBarLayout-->
             <!--android:id="@+id/appbar"-->
             <!--android:layout_width="match_parent"-->
