deal the problemof fitting the photo ,thesetting of menu and the mode of night

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,57 +19,72 @@
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/ctl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fitsSystemWindows="true"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginStart="48dp"
-                app:expandedTitleMarginEnd="64dp">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:src="@drawable/iv1"
-                    android:scaleType="centerCrop"
-                    android:fitsSystemWindows="true"
-                    app:layout_collapseMode="parallax"/>
+            <!--<android.support.design.widget.CollapsingToolbarLayout-->
+                <!--android:id="@+id/ctl"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fitsSystemWindows="true"-->
+                <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
+                <!--app:contentScrim="@color/colorAccent"-->
+                <!--app:expandedTitleMarginStart="48dp"-->
+                <!--app:expandedTitleMarginEnd="64dp"-->
+                <!--app:title="大智障app">-->
+                <!--<ImageView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="200dp"-->
+                    <!--android:src="@drawable/iv_5"-->
+                    <!--android:scaleType="centerCrop"-->
+                    <!--android:fitsSystemWindows="true"-->
+                    <!--app:layout_collapseMode="parallax"/>-->
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     android:layout_gravity="bottom"
+                    app:title="App"
                     app:layout_collapseMode="pin"/>
+                <!--<View-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:background="@drawable/bg_1"/>-->
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+            <!--</android.support.design.widget.CollapsingToolbarLayout>-->
 
-            <!--<android.support.design.widget.TabLayout-->
-                <!--android:id="@+id/tabs"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:background="@color/colorPrimary"/>-->
+
 
 
         </android.support.design.widget.AppBarLayout>
 
-        <!--<android.support.v4.view.ViewPager-->
-            <!--android:id="@+id/vp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!--</android.support.v4.view.ViewPager>-->
+            </android.support.v4.view.ViewPager>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="@color/colorAccent"/>
+        </LinearLayout>
+
         <!--<android.support.v4.widget.NestedScrollView-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent"-->
             <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/rv_text"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->
         <!--</android.support.v4.widget.NestedScrollView>-->
 
         <!--<android.support.v4.view.ViewPager-->
@@ -78,15 +93,15 @@
             <!--android:layout_height="match_parent"-->
             <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:src="@mipmap/ic_launcher"
-            app:layout_anchor="@id/appbar"
-            app:layout_anchorGravity="bottom|right|end"
-            android:onClick="@{()->main.testSnackBar()}"/>
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/fab2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="16dp"-->
+            <!--android:src="@drawable/iv1"-->
+            <!--app:layout_anchor="@id/appbar"-->
+            <!--app:layout_anchorGravity="bottom|right|end"-->
+            <!--android:onClick="@{()->main.testSnackBar()}"/>-->
         <!--<android.support.design.widget.FloatingActionButton-->
             <!--android:id="@+id/fab2"-->
             <!--android:layout_width="wrap_content"-->
