--- a/app/src/main/res/layout/item1.xml
+++ b/app/src/main/res/layout/item1.xml
@@ -3,9 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
         <TextView
+            android:text="ssss"
+            android:textColor="@color/colorAccent"
             android:id="@+id/tv_item"
+            android:gravity="center"
             android:textSize="30sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/bg_item"/>
 </LinearLayout>
